--- a/ecommerce-api.CLIENT/package.json
+++ b/ecommerce-api.CLIENT/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-        "build": "cd client && npm install && npm run build --configuration production",
-    "start": "cd api && npm install && node server.js",
+       "build": "cd client && npm install && npm run build --configuration production",
+    "start": "cd api && npm install && ts-node main.ts",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
