--- a/ecommerce-api.API/tsconfig.json
+++ b/ecommerce-api.API/tsconfig.json
@@ -10,7 +10,7 @@
 
     "strict": true,
     "skipLibCheck": true,
-    "types": ["reflect-metadata"],
+    "types": [],
     "moduleResolution": "Node16",
     "module": "Node16"
   },
