--- a/ecommerce-api.API/package.json
+++ b/ecommerce-api.API/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/joi": "^17.2.2",
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.9.0",
