--- a/ecommerce-api.API/tsconfig.json
+++ b/ecommerce-api.API/tsconfig.json
@@ -1,17 +1,18 @@
 {
   "compilerOptions": {
     "target": "ES6",
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "esModuleInterop": true,
+    "module": "Node16",
+    "moduleResolution": "Node16",
     "outDir": "build",
-    "forceConsistentCasingInFileNames": true,
-
     "strict": true,
     "skipLibCheck": true,
-    "types": ["reflect-metadata"],
-    "moduleResolution": "Node16",
-    "module": "Node16"
+    "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,            // ✅ REQUIRED for reflect-metadata
+    "types": ["reflect-metadata"]             // ✅ Include typings
   },
   "exclude": ["node_modules/"],
   "include": ["src/**/*.ts", "test/**/*.ts"]
