--- a/ecommerce-api.API/package.json
+++ b/ecommerce-api.API/package.json
@@ -12,10 +12,8 @@
   "author": "Chastine Marcelino, Mark Paul Parafine, Jastine Marcelino",
   "license": "ISC",
   "dependencies": {
-    "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/swagger-jsdoc": "^6.0.4",
-    "@types/swagger-ui-express": "^4.1.7",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -39,14 +37,17 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.18",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^4.17.22",
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^1.4.12",
-    "@types/node": "^22.9.0",
+    "@types/node": "^22.15.18",
     "@types/nodemailer": "^6.4.17",
     "@types/otp-generator": "^4.0.2",
     "@types/redis": "^4.0.10",
     "@types/string-similarity": "^4.0.2",
+    "@types/swagger-ui-express": "^4.1.8",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
