--- a/ecommerce-api.API/tsconfig.json
+++ b/ecommerce-api.API/tsconfig.json
@@ -9,9 +9,9 @@
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,            // ✅ REQUIRED for reflect-metadata            // ✅ Include typings
+    "emitDecoratorMetadata": true,
+    "types": ["node", "express"]
   },
   "exclude": ["node_modules/"],
   "include": ["src/**/*.ts", "test/**/*.ts"]
