--- a/ecommerce-api.API/package.json
+++ b/ecommerce-api.API/package.json
@@ -23,7 +23,7 @@
     "googleapis": "^144.0.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.5",
+    "mongoose": "^8.15.0",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
     "otp-generator": "^4.0.1",
@@ -40,6 +40,7 @@
     "@types/cors": "^2.8.18",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.22",
+    "@types/joi": "^17.2.2",
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.18",
