--- a/ecommerce-api.API/tsconfig.json
+++ b/ecommerce-api.API/tsconfig.json
@@ -11,8 +11,7 @@
     "allowSyntheticDefaultImports": true,
 
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,            // ✅ REQUIRED for reflect-metadata
-  "types": ["node"]          // ✅ Include typings
+    "emitDecoratorMetadata": true,            // ✅ REQUIRED for reflect-metadata      // ✅ Include typings
   },
   "exclude": ["node_modules/"],
   "include": ["src/**/*.ts", "test/**/*.ts"]
