--- a/ecommerce-api.API/package.json
+++ b/ecommerce-api.API/package.json
@@ -40,6 +40,7 @@
     "@types/cors": "^2.8.18",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.22",
+    "@types/joi": "^17.2.2",
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.18",
