--- a/ecommerce-api.API/package.json
+++ b/ecommerce-api.API/package.json
@@ -33,7 +33,8 @@
     "schema": "^0.2.1",
     "string-similarity": "^4.0.4",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+        "@types/node": "^22.15.18"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -43,7 +44,7 @@
     "@types/joi": "^17.2.2",
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^1.4.12",
-    "@types/node": "^22.15.18",
+
     "@types/nodemailer": "^6.4.17",
     "@types/otp-generator": "^4.0.2",
     "@types/redis": "^4.0.10",
