--- a/ecommerce-api.API/tsconfig.json
+++ b/ecommerce-api.API/tsconfig.json
@@ -1,19 +1,18 @@
 {
   "compilerOptions": {
     "target": "ES6",
-    "module": "Node16",
-    "moduleResolution": "Node16",
+    "module": "CommonJS",
+    "moduleResolution": "node",
     "outDir": "build",
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,            // ✅ REQUIRED for reflect-metadata
-  "types": ["node"]          // ✅ Include typings
+    "emitDecoratorMetadata": true,
+    "types": ["node"]
   },
-  "exclude": ["node_modules/"],
+  "exclude": ["node_modules"],
   "include": ["src/**/*.ts", "test/**/*.ts"]
 }
