--- a/ecommerce-api.API/package.json
+++ b/ecommerce-api.API/package.json
@@ -4,11 +4,12 @@
   "description": "This API is about invetory management",
   "main": "src/server.ts",
   "scripts": {
-    "start": "ts-node src/server.ts",
-    "dev": "nodemon src/server .ts",
-    "build": "tsc",
-    "test": "echo \"No test specified\" && exit 0"
-  },
+  "start": "ts-node src/server.ts",
+  "dev": "nodemon src/server.ts",
+  "build": "tsc",
+  "postinstall": "npm install @types/node --no-save",
+  "test": "echo \"No test specified\" && exit 0"
+},
   "author": "Chastine Marcelino, Mark Paul Parafine, Jastine Marcelino",
   "license": "ISC",
   "dependencies": {
