--- a/ecommerce-api.API/package.json
+++ b/ecommerce-api.API/package.json
@@ -34,7 +34,7 @@
     "schema": "^0.2.1",
     "string-similarity": "^4.0.4",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
+    "swagger-ui-express": "^5.0.1"
         
   },
   "devDependencies": {
