--- a/ecommerce-api.API/package.json
+++ b/ecommerce-api.API/package.json
@@ -18,16 +18,17 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "googleapis": "^144.0.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.5",
+    "mongoose": "^8.15.0",
     "multer": "^1.4.5-lts.2",
-    "nodemailer": "^6.10.0",
+    "nodemailer": "^6.10.1",
     "otp-generator": "^4.0.1",
+    "path": "^0.12.7",
     "pg": "^8.13.1",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
