--- a/ecommerce-api.API/tsconfig.json
+++ b/ecommerce-api.API/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES6",
+    "target": "ES2020",                           // ✅ better modern JS features
     "module": "CommonJS",
     "moduleResolution": "node",
     "outDir": "build",
@@ -11,7 +11,8 @@
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "types": ["node"]
+    "types": ["node"],                            // ✅ ensures Node globals like process
+    "lib": ["es2020"]                             // ✅ fixes .includes, async/await, etc.
   },
   "exclude": ["node_modules"],
   "include": ["src/**/*.ts", "test/**/*.ts"]
